# devops

./: .gitignore  CI.md  README.md
.github/workflows/: app_python.yml
ansible/: hosts.txt
ansible/playbooks/: deploy_app.yml  install_docker.yml
ansible/roles/deploy/meta/: main.yml
ansible/roles/deploy/tasks/: main.yml
ansible/roles/deploy/templates/: docker-compose.yml
ansible/roles/deploy/vars/: main.yml
app_python/: .dockerignore  DOCKER.md  Dockerfile  Jenkinsfile  PYTHON.md  app.py  pyproject.toml  visits.txt
app_python/static/img/: .Kremlin.jpg.icloud  .ZKD.jpg.icloud
app_python/static/scripts/: javascript.js
app_python/static/styles/: style.css
app_python/templates/: index.html
app_python/test/: test_connection.py  test_delay.py
jenkins/: Dockerfile  Jenkinsfile
k8s/: 11.md  12.md  13.md  README.md  deployment.yml  my-app-0.1.0.tgz  service.yml
k8s/my-app/: values.yaml
k8s/my-app/files/: config.json
k8s/my-app/templates/: configmap.yml  deployment.yaml  secrets.yml  service.yaml  statefulset.yaml
monitoring/: LOGGING.md  MONITORING.md  docker-compose.yml  prometheus.yml
terraform/: TF.md  aws.tf
terraform/docker/: main.tf
terraform/vm/: main.tf
